--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-# This .gitignore file should be placed at the root of your Unity project directory
-#
-# Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
-#
+# This text file tells GitHub to remove meta files from Unity when uploading to the Repo.
+
 [Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
